// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionTitle should render 1`] = `
<div>
  <div
    class="plan-title"
  >
    <div
      class="plan-name"
    >
      Business
    </div>
    <div
      class="annual-price"
    >
      <div>
        <strong>
          750 USD
        </strong>
        <span
          class="text-secondary small"
        >
           / year
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SubscriptionTitle should render with a label 1`] = `
<div>
  <div
    class="plan-title"
  >
    <div
      class="plan-name"
    >
      Business
    </div>
    <div
      class="label label-root label-primary label-lg label-uppercase"
    >
      <span
        class="label-item"
      >
        1x
      </span>
    </div>
    <div
      class="annual-price"
    >
      <div>
        <strong>
          750 USD
        </strong>
        <span
          class="text-secondary small"
        >
           / year
        </span>
      </div>
    </div>
  </div>
</div>
`;
